--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -57,7 +57,7 @@
     <color name="green10">#B6DB49</color>
     <color name="green11">#C5E26D</color>
     <color name="green12">#D3E992</color>
-    <color name="green13">#E2F0B6</color>
+    <color name="green13">#A5D6A7</color>
     <color name="green14">#F0F8DB</color>
 
     <color name="orange01">#FF8A00</color>
