--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,50 +3,47 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fitsSystemWindows="true">
+    android:layout_height="match_parent">
 
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
-        android:layout_height="256dp"
-        android:fitsSystemWindows="true"
+        android:layout_height="@dimen/backdrop_height"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
         <android.support.design.widget.CollapsingToolbarLayout
             android:id="@+id/col_toolbar"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:fitsSystemWindows="true"
-            app:titleEnabled="false"
             app:contentScrim="@color/primary"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            app:titleEnabled="false">
 
             <ImageView
                 android:id="@+id/backdrop"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
+                android:contentDescription="@string/backdrop_desc"
                 android:scaleType="centerCrop" />
 
             <View
-                android:background="@drawable/scrim"
                 android:id="@+id/scrim"
-                android:visibility="invisible"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                android:background="@drawable/scrim"
+                android:visibility="invisible" />
 
             <android.support.v7.widget.Toolbar
                 android:id="@+id/toolbar"
-                app:tabContentStart="72dp"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
 
             <android.support.design.widget.TabLayout
                 android:id="@+id/tab"
-                android:layout_gravity="bottom"
                 android:layout_width="match_parent"
                 android:layout_height="?attr/actionBarSize"
-                app:tabContentStart="72dp"
+                android:layout_gravity="bottom"
+                app:tabContentStart="@dimen/tab_content_start"
                 app:tabMode="scrollable" />
         </android.support.design.widget.CollapsingToolbarLayout>
     </android.support.design.widget.AppBarLayout>
@@ -59,14 +56,6 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior"
         tools:context=".MainActivity"
         tools:ignore="MergeRootFrame">
-
-        <!--<android.support.v4.view.PagerTabStrip-->
-        <!--android:id="@+id/pager_header"-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="?attr/actionBarSize"-->
-        <!--android:layout_gravity="top"-->
-        <!--android:background="@color/primary"-->
-        <!--android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar" />-->
 
     </android.support.v4.view.ViewPager>
 </android.support.design.widget.CoordinatorLayout>
