--- a/app/src/main/res/layout/scores_list_item.xml
+++ b/app/src/main/res/layout/scores_list_item.xml
@@ -2,21 +2,20 @@
 <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    app:layout_behavior="@string/appbar_scrolling_view_behavior"
     android:layout_height="match_parent"
-    android:layout_marginTop="@dimen/activity_vertical_margin">
+    android:layout_marginTop="@dimen/activity_vertical_margin"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@drawable/list_item"
+        android:layout_margin="@dimen/card_padding"
         android:orientation="vertical">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:paddingTop="5dp">
+            android:orientation="horizontal">
 
             <LinearLayout
                 android:layout_width="0dp"
@@ -26,8 +25,9 @@
 
                 <ImageView
                     android:id="@+id/home_crest"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:contentDescription="@string/home_team_crest_desc"
+                    android:layout_width="@dimen/crest_image_size"
+                    android:layout_height="@dimen/crest_image_size"
                     android:layout_gravity="center" />
 
                 <TextView
@@ -75,8 +75,9 @@
 
                 <ImageView
                     android:id="@+id/away_crest"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="@dimen/crest_image_size"
+                    android:layout_height="@dimen/crest_image_size"
+                    android:contentDescription="@string/away_team_crest_desc"
                     android:layout_gravity="center" />
 
                 <TextView
@@ -90,10 +91,8 @@
             </LinearLayout>
         </LinearLayout>
 
-        <FrameLayout
-            android:id="@+id/details_fragment_container"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+        <include layout="@layout/detail_fragment" />
+
     </LinearLayout>
 </android.support.v7.widget.CardView>
 
