Implemented Sync Adapter and Swipe Refresher

--- a/app/src/main/res/layout/scores_list_item.xml
+++ b/app/src/main/res/layout/scores_list_item.xml
@@ -91,7 +91,7 @@
             </LinearLayout>
         </LinearLayout>
 
-        <include layout="@layout/detail_fragment" />
+        <include layout="@layout/details" />
 
     </LinearLayout>
 </android.support.v7.widget.CardView>
