--- a/app/src/main/res/layout/widget_list.xml
+++ b/app/src/main/res/layout/widget_list.xml
@@ -7,6 +7,12 @@
     android:orientation="vertical"
     android:padding="@dimen/widget_margin">
 
+    <TextView
+        android:layout_width="match_parent"
+        android:gravity="start|center_vertical"
+        android:layout_height="56dp"
+        android:text="@string/today_match"/>
+
     <ListView
         android:id="@+id/widget_list"
         android:layout_width="match_parent"
