--- a/app/src/main/res/layout/widget_list.xml
+++ b/app/src/main/res/layout/widget_list.xml
@@ -3,19 +3,23 @@
     android:id="@+id/widget"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/primary"
     android:orientation="vertical"
     android:padding="@dimen/widget_margin">
 
     <TextView
         android:layout_width="match_parent"
-        android:gravity="start|center_vertical"
         android:layout_height="56dp"
-        android:text="@string/today_match"/>
+        android:layout_marginLeft="@dimen/widget_margin"
+        android:layout_marginStart="@dimen/widget_margin"
+        android:background="@color/primary"
+        android:gravity="start|center_vertical"
+        android:text="@string/today_matches"
+        android:textSize="20sp" />
 
     <ListView
         android:id="@+id/widget_list"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:background="@color/accent" />
 
 </LinearLayout>
